<resources>
    <string name="app_name">isFitness</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_group_sharing">GroupSharing</string>
    <string name="title_activity_my_page">MyPage</string>
    <string name="search_hint">Search Friends</string>
    <string name="title_search_friend">Search Friends</string>
    <string name="title_activity_share_content">ShareContent</string>
    <string name="title_activity_follow_handle">FollowHandle</string>
    <string name="xlistview_header_hint_normal">Pull To Refresh</string>
    <string name="xlistview_header_hint_ready">Release To Refresh</string>
    <string name="xlistview_header_hint_loading">Loading...</string>
    <string name="xlistview_header_last_time">Last Update：</string>
    <string name="xlistview_footer_hint_normal">Read More</string>
    <string name="xlistview_footer_hint_ready">Release To Load</string>
    <string name="title_activity_sport">Sport</string>
    <string name="distance_label">Distance(km)</string>
    <string name="orginal_distance">0.00km</string>
    <string name="time_label">Time</string>
    <string name="orginal_time">00:00:00</string>
    <string name="pace_label">Pace(minutes/km)</string>
    <string name="orginal_pace">--</string>
    <string name="calory_label">Calory</string>
    <string name="orginal_calory">--</string>
    <string name="speed_label">Speed(km/hour)</string>
    <string name="orginal_speed">--</string>
    <string name="save_dialog_title">Save</string>
    <string name="share_dialog_title">Share</string>
    <string name="title_activity_sharing">SharingActivity</string>
    <string name="title_activity_my_activities">MyActivities</string>
</resources>
