<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bStartSport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Start"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/bResume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Resume"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/bStartSport"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/bStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Stop"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/bResume"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/tDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orginal_distance"
            android:textSize="20sp"
            android:layout_alignTop="@+id/bStartSport"
            android:layout_alignParentRight="true" />

        <TextView
            android:id="@+id/tDistanceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance_label"
            android:layout_below="@+id/tDistance"
            android:layout_alignParentRight="true" />

        <TextView
            android:id="@+id/tTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orginal_time"
            android:textSize="20sp"
            android:layout_below="@+id/bStartSport"
            android:layout_alignParentLeft="true" />

        <TextView
            android:id="@+id/tTimeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_label"
            android:layout_below="@+id/tTime"
            android:layout_alignParentLeft="true" />

        <TextView
            android:id="@+id/tPace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orginal_pace"
            android:textSize="20sp"
            android:layout_alignTop="@+id/tTime"
            android:layout_alignParentRight="true" />

        <TextView
            android:id="@+id/tPaceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pace_label"
            android:layout_below="@+id/tTime"
            android:layout_alignParentRight="true" />

        <TextView
            android:id="@+id/tCalory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orginal_calory"
            android:textSize="20sp"
            android:layout_below="@+id/tTimeLabel"
            android:layout_alignParentLeft="true" />

        <TextView
            android:id="@+id/tCaloryLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calory_label"
            android:layout_below="@+id/tCalory"
            android:layout_alignParentLeft="true"  />

        <TextView
            android:id="@+id/tSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orginal_speed"
            android:textSize="20sp"
            android:layout_alignTop="@+id/tCalory"
            android:layout_alignParentRight="true" />

        <TextView
            android:id="@+id/tSpeedLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speed_label"
            android:layout_below="@+id/tSpeed"
            android:layout_alignParentRight="true" />

    </RelativeLayout>

    <fragment
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:id="@+id/map"
        tools:context="com.example.weiweili.isfitness.Sport"
        android:name="com.google.android.gms.maps.SupportMapFragment" />

    </LinearLayout>
